--- a/edge_devices/building-pyflink-apps/docker-compose.yml
+++ b/edge_devices/building-pyflink-apps/docker-compose.yml
@@ -96,7 +96,7 @@ services:
       - KAFKA_CFG_BROKER_ID=0
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
       - KAFKA_CFG_LISTENERS=INTERNAL://:9092,EXTERNAL://:29092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=INTERNAL://kafka-0:9092,EXTERNAL://localhost:29092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=INTERNAL://kafka-0:9092,EXTERNAL://10.8.1.96:29092
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=INTERNAL
       - KAFKA_CFG_NUM_PARTITIONS=5
       - KAFKA_CFG_DEFAULT_REPLICATION_FACTOR=1
